sizing issue on mobile

--- a/components/Icon/Icon.scss
+++ b/components/Icon/Icon.scss
@@ -7,10 +7,14 @@
   align-items: baseline;
   justify-content: center;
   height: 100%;
+  max-height: 100%;
+  max-width: 100px;
 
   svg {
     width: 100%;
     height: 100%;
+    max-height: 18px;
+    max-width: 20px;
   }
 
   &.dark {
